Don't call textdomain - it is not only useless but harmful (refs #581)